# rust_webgl_minimal

./: Makefile  README.md
src/: index.html  style.css
src/core/: Cargo.toml
src/core/src/: app.rs  full_screen_quad.rs  lib.rs  shader.rs
src/core/src/shaders/: simple.frag  simple.vert
